Nearest player for detecting setBlock