@@ -7,13 +7,14 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Timestamp;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import net.minecraft.entity.player.EntityPlayerMP;
 import net.minecraftforge.common.config.Configuration;
 import net.minecraftforge.event.entity.living.LivingEvent.LivingUpdateEvent;
 
-import com.colen.tempora.logging.loggers.ISerializable;
+import com.colen.tempora.logging.loggers.generic.ISerializable;
 import com.colen.tempora.logging.loggers.generic.ColumnDef;
 import com.colen.tempora.logging.loggers.generic.GenericPositionalLogger;
 
@@ -58,7 +59,7 @@ public class EntityPositionLogger extends GenericPositionalLogger<EntityPosition
 
     @Override
     protected List<ColumnDef> getTableColumns() {
-        return List.of(new ColumnDef("entityName", "TEXT", "NOT NULL"));
+        return Arrays.asList(new ColumnDef("entityName", "TEXT", "NOT NULL"));
     }
 
     @Override
